--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,9 @@
 
 <body>
   <h1>Odin Battleship</h1>
+  <div class="info-container">
+    <p><span class="info-head">Turn:</span> <span class="info">Player</span></p>
+  </div>
   <div class="computer-board">
     <h2>Computer Board</h2>
     <div class="grid-board"></div>
