finish player board display

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
   <div class="info-container">
     <p><span class="info-head">Turn:</span> <span class="info">Player</span></p>
   </div>
+  <button class="restart-btn">Restart</button>
   <div class="computer-board">
     <h2>Computer Board</h2>
     <div class="grid-board"></div>
